--- a/coffeesite/package.json
+++ b/coffeesite/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-elastic-carousel": "^0.11.5",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
