--- a/coffeesite/package.json
+++ b/coffeesite/package.json
@@ -6,7 +6,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
-    "react-router-dom": "^5.2.1",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1"
   },
