--- a/coffeesite/package.json
+++ b/coffeesite/package.json
@@ -7,8 +7,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "react-elastic-carousel": "^0.11.5"
+    "react-slick": "^0.28.1",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
